--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ body{
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
-
+.area{
+    background-color: #8185b950;
+    width: 500px;
+    padding: 30px 10px ;
+    border-radius: 15px;
+    margin: auto;    
+}
 .square{
     
     width: 100px;
